fix: stop DOG getting squashed on narrow screens (#352)
* fix: stop DOG getting squashed on narrow screens

* fix: maintain DOG position relative to media

* Bump package

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -138,6 +138,9 @@ $romper-button-border: 4px;
   }
 
   .romper-dog {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
     pointer-events: none;
     position: absolute;
     z-index: 101;
